[metadata]
name = loom
description = Python library for machine learning data transformation pipelines
author = Henrique Magalhães Soares
licence = MIT
licence_file = LICENCE
platforms = unix, linux, osx, win32

[options]
packages = loom
install_requires =
python_requires = >=3.8
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9

[options.package_data]
loom = py.typed

[flake8]
max-line-length = 160